[gd_scene load_steps=10 format=4 uid="uid://bdh8i2s6n6g1w"]

[ext_resource type="Texture2D" uid="uid://f7xyha2ihlpa" path="res://OneStepAtTheTime/SpritesAndArts/TileMap/TempTileset.png" id="1_58how"]
[ext_resource type="Script" uid="uid://dfv7k5ix42j4i" path="res://OneStepAtTheTime/Scripts/WorldLevelScript.gd" id="1_amu5t"]
[ext_resource type="Texture2D" uid="uid://crs1p14el278q" path="res://OneStepAtTheTime/SpritesAndArts/TileMap/TempGroundTile.png" id="2_amu5t"]
[ext_resource type="PackedScene" uid="uid://docjkc5pcob5y" path="res://OneStepAtTheTime/ObjectScenes/rockSpawner.tscn" id="3_55g8e"]
[ext_resource type="PackedScene" uid="uid://grudrdnaxpm6" path="res://OneStepAtTheTime/ObjectScenes/playerChar.tscn" id="4_wlfbl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ts78e"]
texture = ExtResource("1_58how")
0:1/size_in_atlas = Vector2i(8, 3)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-47.7946, -23.8973, 47.7946, -24.2159, 66.5938, -5.09809, 43.0152, 16.5688, 20.3924, 23.8973, -18.7992, 23.8973, -43.3338, 17.5247, -66.2752, -5.41672)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ayt38"]
texture = ExtResource("2_amu5t")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gake3"]
texture = ExtResource("1_58how")
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -4.16255, 5.07628)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 4.16255, 5.07628)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 3.85797, -3.9595, 1.31983)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 7.00526, -3.04577, 6.59916, -8, 4.16255)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -6.29458, 8, -8, 7.10679)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 6.29458, 8, 8, 7.10679)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 7.00526, 3.04577, 6.59916, 8, 4.16255)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 3.85797, 3.9595, 1.31983)

[sub_resource type="TileSet" id="TileSet_isimb"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_ayt38")
sources/5 = SubResource("TileSetAtlasSource_gake3")
sources/0 = SubResource("TileSetAtlasSource_ts78e")

[node name="MainWorldLevel" type="Node2D"]
process_mode = 3
script = ExtResource("1_amu5t")

[node name="TileMap" type="TileMapLayer" parent="."]
process_mode = 1
position = Vector2(0, -1)
tile_map_data = PackedByteArray("AADS/wQABQAAAAEAAADS/wUABQAAAAIAAADT/wQABQABAAEAAADT/wUABQABAAIAAADT/wYABQABAAMAAADU/wQABQACAAEAAADU/wUABQACAAIAAADU/wYABQACAAMAAADV/wQABQADAAEAAADV/wUABQADAAIAAADV/wYABQADAAMAAADW/wQABQAEAAEAAADW/wUABQAEAAIAAADW/wYABQADAAMAAADX/wQABQAFAAEAAADX/wUABQAFAAIAAADX/wYABQAEAAMAAADY/wQABQAFAAEAAADY/wUABQAFAAIAAADY/wYABQADAAMAAADZ/wQABQACAAEAAADZ/wUABQACAAIAAADZ/wYABQAEAAMAAADa/wQABQADAAEAAADa/wUABQADAAIAAADa/wYABQADAAMAAADb/wQABQAEAAEAAADb/wUABQAEAAIAAADb/wYABQAEAAMAAADc/wQABQAFAAEAAADc/wUABQAFAAIAAADc/wYABQADAAMAAADd/wQABQACAAEAAADd/wUABQACAAIAAADd/wYABQAEAAMAAADe/wQABQADAAEAAADe/wUABQADAAIAAADe/wYABQADAAMAAADf/wQABQAEAAEAAADf/wUABQAEAAIAAADf/wYABQAEAAMAAADg/wQABQAFAAEAAADg/wUABQAFAAIAAADg/wYABQADAAMAAADh/wQABQACAAEAAADh/wUABQACAAIAAADh/wYABQAEAAMAAADi/wQABQADAAEAAADi/wUABQADAAIAAADi/wYABQADAAMAAADj/wQABQAEAAEAAADj/wUABQAEAAIAAADj/wYABQAEAAMAAADk/wQABQAFAAEAAADk/wUABQAFAAIAAADk/wYABQADAAMAAADl/wQABQACAAEAAADl/wUABQACAAIAAADl/wYABQAEAAMAAADm/wQABQADAAEAAADm/wUABQADAAIAAADm/wYABQADAAMAAADn/wQABQAEAAEAAADn/wUABQAEAAIAAADn/wYABQAEAAMAAADo/wQABQAFAAEAAADo/wUABQAFAAIAAADo/wYABQADAAMAAADp/wQABQACAAEAAADp/wUABQACAAIAAADp/wYABQAEAAMAAADq/wQABQADAAEAAADq/wUABQADAAIAAADq/wYABQADAAMAAADr/wQABQAEAAEAAADr/wUABQAEAAIAAADr/wYABQAEAAMAAADs/wQABQAFAAEAAADs/wUABQAFAAIAAADs/wYABQADAAMAAADt/wQABQACAAEAAADt/wUABQACAAIAAADt/wYABQAEAAMAAADu/wQABQADAAEAAADu/wUABQADAAIAAADu/wYABQADAAMAAADv/wQABQAEAAEAAADv/wUABQAEAAIAAADv/wYABQAEAAMAAADw/wQABQAFAAEAAADw/wUABQAFAAIAAADw/wYABQADAAMAAADx/wQABQACAAEAAADx/wUABQACAAIAAADx/wYABQAEAAMAAADy/wQABQADAAEAAADy/wUABQADAAIAAADy/wYABQADAAMAAADz/wQABQAEAAEAAADz/wUABQAEAAIAAADz/wYABQAEAAMAAAD0/wQABQAFAAEAAAD0/wUABQAFAAIAAAD0/wYABQADAAMAAAD1/wQABQACAAEAAAD1/wUABQACAAIAAAD1/wYABQAEAAMAAAD2/wQABQADAAEAAAD2/wUABQADAAIAAAD2/wYABQADAAMAAAD3/wQABQAEAAEAAAD3/wUABQAEAAIAAAD3/wYABQAEAAMAAAD4/wQABQAFAAEAAAD4/wUABQAFAAIAAAD4/wYABQADAAMAAAACAAQABQAGAAEAAAACAAUABQAGAAIAAAACAAYABQAEAAMAAAADAAQABQADAAEAAAADAAUABQADAAIAAAADAAYABQADAAMAAAAEAAQABQAEAAEAAAAEAAUABQAEAAIAAAAEAAYABQAEAAMAAAAFAAQABQAFAAEAAAAFAAUABQAFAAIAAAAFAAYABQADAAMAAAAGAAQABQACAAEAAAAGAAUABQACAAIAAAAGAAYABQAEAAMAAAAHAAQABQADAAEAAAAHAAUABQADAAIAAAAHAAYABQADAAMAAAAIAAQABQAEAAEAAAAIAAUABQAEAAIAAAAIAAYABQAEAAMAAAAJAAQABQAFAAEAAAAJAAUABQAFAAIAAAAJAAYABQADAAMAAAAKAAQABQACAAEAAAAKAAUABQACAAIAAAAKAAYABQAEAAMAAAALAAQABQADAAEAAAALAAUABQADAAIAAAALAAYABQADAAMAAAAMAAQABQAEAAEAAAAMAAUABQAEAAIAAAAMAAYABQAEAAMAAAANAAQABQAFAAEAAAANAAUABQAFAAIAAAANAAYABQADAAMAAAAOAAQABQACAAEAAAAOAAUABQACAAIAAAAOAAYABQAEAAMAAAAPAAQABQADAAEAAAAPAAUABQADAAIAAAAPAAYABQADAAMAAAAQAAQABQAEAAEAAAAQAAUABQAEAAIAAAAQAAYABQAEAAMAAAARAAQABQAFAAEAAAARAAUABQAFAAIAAAARAAYABQADAAMAAAASAAQABQACAAEAAAASAAUABQACAAIAAAASAAYABQAEAAMAAAATAAQABQADAAEAAAATAAUABQADAAIAAAATAAYABQADAAMAAAAUAAQABQAEAAEAAAAUAAUABQAEAAIAAAAUAAYABQAEAAMAAAAVAAQABQAFAAEAAAAVAAUABQAFAAIAAAAVAAYABQADAAMAAAAWAAQABQACAAEAAAAWAAUABQACAAIAAAAWAAYABQAEAAMAAAAXAAQABQADAAEAAAAXAAUABQADAAIAAAAXAAYABQADAAMAAAAYAAQABQAEAAEAAAAYAAUABQAEAAIAAAAYAAYABQAEAAMAAAAZAAQABQAFAAEAAAAZAAUABQAFAAIAAAAZAAYABQADAAMAAAAaAAQABQACAAEAAAAaAAUABQACAAIAAAAaAAYABQAEAAMAAAAbAAQABQADAAEAAAAbAAUABQADAAIAAAAbAAYABQADAAMAAAAcAAQABQAEAAEAAAAcAAUABQAEAAIAAAAcAAYABQAEAAMAAAAdAAQABQAFAAEAAAAdAAUABQAFAAIAAAAdAAYABQADAAMAAAAeAAQABQACAAEAAAAeAAUABQACAAIAAAAeAAYABQAEAAMAAAAfAAQABQADAAEAAAAfAAUABQADAAIAAAAfAAYABQADAAMAAAAgAAQABQAEAAEAAAAgAAUABQAEAAIAAAAgAAYABQAEAAMAAAAhAAQABQAFAAEAAAAhAAUABQAFAAIAAAAhAAYABQADAAMAAAAiAAQABQACAAEAAAAiAAUABQACAAIAAAAiAAYABQAEAAMAAAAjAAQABQADAAEAAAAjAAUABQADAAIAAAAjAAYABQADAAMAAAAkAAQABQAEAAEAAAAkAAUABQAEAAIAAAAkAAYABQAEAAMAAAAlAAQABQAFAAEAAAAlAAUABQAFAAIAAAAlAAYABQADAAMAAAAmAAQABQACAAEAAAAmAAUABQACAAIAAAAmAAYABQAEAAMAAAAnAAQABQADAAEAAAAnAAUABQADAAIAAAAnAAYABQADAAMAAAAoAAQABQAEAAEAAAAoAAUABQAEAAIAAAAoAAYABQAEAAMAAAApAAQABQAFAAEAAAApAAUABQAFAAIAAAApAAYABQADAAMAAAAqAAQABQACAAEAAAAqAAUABQACAAIAAAAqAAYABQAEAAMAAAArAAQABQADAAEAAAArAAUABQADAAIAAAArAAYABQADAAMAAAAsAAQABQAEAAEAAAAsAAUABQAEAAIAAAAsAAYABQAEAAMAAAAtAAQABQAFAAEAAAAtAAUABQAFAAIAAAAtAAYABQAFAAMAAAAuAAQABQAGAAEAAAAuAAUABQAGAAIAAAAuAAYABQAGAAMAAAAvAAQABQAHAAEAAAAvAAUABQAHAAIAAAD9/wQABQABAAEAAAD9/wUABQABAAIAAAD+/wQABQACAAEAAAD+/wUABQACAAIAAAD//wQABQADAAEAAAD//wUABQADAAIAAAAAAAQABQAEAAEAAAAAAAUABQAEAAIAAAABAAQABQAFAAEAAAABAAUABQAFAAIAAAD5/wQABQABAAEAAAD5/wUABQABAAIAAAD6/wQABQACAAEAAAD6/wUABQACAAIAAAD7/wQABQADAAEAAAD7/wUABQADAAIAAAD8/wQABQAEAAEAAAD8/wUABQAEAAIAAAD5/wYABQADAAMAAAD6/wYABQAEAAMAAAD7/wYABQADAAMAAAD8/wYABQAEAAMAAAD9/wYABQADAAMAAAD+/wYABQAEAAMAAAD//wYABQADAAMAAAAAAAYABQAEAAMAAAABAAYABQADAAMAAAA=")
tile_set = SubResource("TileSet_isimb")

[node name="Rockspawner" parent="." instance=ExtResource("3_55g8e")]
process_mode = 1
position = Vector2(0, -69)

[node name="TempPlayerChar" parent="." instance=ExtResource("4_wlfbl")]
process_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume game"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
